@@ -14,12 +14,29 @@ datatype: eismint3_climate
 # module where type is defined
 datamod:  eismint3_types
 
+# ======== Extra climate fields to write out ========
+
 [prcp]
 dimensions:    time,y1,x1
 units:         meter/year
 long_name:     accumulation
 data:          data%presprcp
-load:          1
+
+[arng]
+dimensions:    time,y1,x1
+units:         meter/year
+long_name:     accumulation
+data:          data%arng
+
+# ======== Extra climate fields to read and write ========
+
+[presprcp]
+dimensions:    time,y1,x1
+units:         meter/year
+long_name:     accumulation_present
+data:          data%presprcp
+load:	       1
+hot:	       1
 
 [presusurf]
 # Present-day upper surface elevation
@@ -28,27 +45,12 @@ units:         meter
 long_name:     present_surface
 data:          data%presusurf
 load:          1
+hot:	       1
 
-[arng]
-dimensions:    time,y1,x1
-units:         meter/year
-long_name:     accumulation
-data:          data%arng
-
-[EISMINT_prcp]
-dimensions:    time,y1,x1
-units:         meter/year
-long_name:     accumulation
-data:          data%prcp
+# ======== Derived from presusurf ========================
 
 [presartm]
 dimensions:    time,y1,x1
 units:         degC
 long_name:     present_surface_temperature
 data:          data%presartm
-
-[presprcp]
-dimensions:    time,y1,x1
-units:         meter/year
-long_name:     accumulation_present
-data:          data%presprcp
